add icons and change theme
Signed-off-by: seyistry <seyistry@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -34,19 +34,19 @@
 }
 
 .violet-gradient {
-    background: #804dee;
-    background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+    background: #32fa98;
+    background: linear-gradient(-90deg, #32fa98 0%, rgba(60, 51, 80, 0) 100%);
     background: -webkit-linear-gradient(
         -90deg,
-        #804dee 0%,
+        #32fa98 0%,
         rgba(60, 51, 80, 0) 100%
     );
 }
 
 .green-pink-gradient {
     background: "#00cea8";
-    background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
-    background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+    background: linear-gradient(90.13deg, #00cea8 1.9%, #61ff96 97.5%);
+    background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #61ff96 97.5%);
 }
 
 .orange-text-gradient {
@@ -79,6 +79,17 @@
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.svg-container {
+    background-image: url("./assets/herobg.svg");
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    left: 50%;
+    top: -5rem;
+    padding-bottom: 40%;
 }
 
 .blue-text-gradient {
